--- a/spotfy/tailwind.css
+++ b/spotfy/tailwind.css
@@ -4,13 +4,14 @@
 
 @layer base {
     html,body, #root {
-        @apply h-full
+        @apply h-full bg-backdrop text-white antialiased
     }
     #root{
         @apply flex-col
     }
-    .container{
-        height: calc(100% - theme('spacing.5'));
+    .wrapper{
+        height: calc(100% - theme('spacing.24'));
+        @apply flex
     }
     
 }
