--- a/src/style.css
+++ b/src/style.css
@@ -730,6 +730,18 @@ html, body,  #root {
   overflow: auto;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -887,6 +899,11 @@ html, body,  #root {
 
 .text-s {
   font-size: 0.813rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-semibold {
