--- a/src/style.css
+++ b/src/style.css
@@ -652,6 +652,18 @@ html, body,  #root {
   height: 6rem;
 }
 
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
 .h-\[3\.75rem\] {
   height: 3.75rem;
 }
@@ -672,20 +684,12 @@ html, body,  #root {
   height: 2rem;
 }
 
-.h-7 {
-  height: 1.75rem;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
 .w-full {
   width: 100%;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-10 {
@@ -710,10 +714,6 @@ html, body,  #root {
 
 .w-8 {
   width: 2rem;
-}
-
-.w-3 {
-  width: 0.75rem;
 }
 
 .w-48 {
@@ -811,6 +811,10 @@ html, body,  #root {
   white-space: nowrap;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -825,10 +829,6 @@ html, body,  #root {
 
 .rounded-sm {
   border-radius: 0.125rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
 }
 
 .rounded-3xl {
@@ -857,6 +857,11 @@ html, body,  #root {
   background-color: rgb(24 24 24 / var(--tw-bg-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(29 185 84 / var(--tw-bg-opacity));
@@ -865,11 +870,6 @@ html, body,  #root {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-active {
@@ -985,6 +985,10 @@ html, body,  #root {
   line-height: 1.25rem;
 }
 
+.text-\[0\.688rem\] {
+  font-size: 0.688rem;
+}
+
 .text-s {
   font-size: 0.813rem;
 }
@@ -1024,12 +1028,12 @@ html, body,  #root {
   --tw-text-opacity: 0.7;
 }
 
-.opacity-70 {
-  opacity: 0.7;
-}
-
 .opacity-0 {
   opacity: 0;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .line-clamp-2 {
