--- a/src/style.css
+++ b/src/style.css
@@ -619,6 +619,10 @@ html, body,  #root {
   right: 0.25rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
