--- a/tailwind.css
+++ b/tailwind.css
@@ -3,15 +3,16 @@
 @tailwind utilities;
 
 @layer base {
-    html,body, #root {
-        @apply h-full bg-backdrop text-white antialiased
-    }
-    #root{
-        @apply flex-col
-    }
-    .wrapper{
-        height: calc(100% - theme('spacing.24'));
-        @apply flex
-    }
-    
+  html,
+  body,
+  #root {
+    @apply h-full bg-backdrop text-white antialiased;
+  }
+  #root {
+    @apply flex-col;
+  }
+  .wrapper {
+    height: calc(100% - theme("spacing.24"));
+    @apply flex;
+  }
 }
