--- a/src/style.css
+++ b/src/style.css
@@ -662,6 +662,10 @@ html,
   margin-top: 0.5rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .flex {
   display: flex;
 }
@@ -881,6 +885,10 @@ html,
 
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .border-t {
